--- a/Compose2/app/src/main/AndroidManifest.xml
+++ b/Compose2/app/src/main/AndroidManifest.xml
@@ -10,6 +10,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CleanArcitectureNote">
         <activity
+            android:name=".todo.TodoActivity"
+            android:exported="true"
+            android:label="@string/title_activity_todo"
+            android:theme="@style/Theme.CleanArcitectureNote.NoActionBar" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
