--- a/NotificationFinder/app/build.gradle
+++ b/NotificationFinder/app/build.gradle
@@ -57,5 +57,9 @@ dependencies {
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9")
     implementation("org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9")
 
+    //GOOGLE MAP
+    implementation 'com.google.android.gms:play-services-maps:18.0.2'
+    implementation 'com.google.android.gms:play-services-location:19.0.1'
+
 
 }
